2004-08-28  Roman Bogorodskiy <bogorodskiy@inbox.ru>
	
	* bugfix: fix build on FreeBSD 4.x

2004-08-25  Pierre Chifflier  <pollux@cpe.fr>

	* --- cvs commit TAG: rel-0-4-0

	* bugfix: changed EPSV reply code to 229 (to be RFC-compliant)
	* bugfix: avoid segfault on freebsd when kernel has no shm support

2004-08-14  Pierre Chifflier  <pollux@cpe.fr>

	* feature: some code audit using splint. Fixed some warnings
	* feature: tcl/perl: vfs remove -r
	* feature: config option data_buffer_length
	* feature: flag K (enforce TLS data connections)
	* feature: site change user flags now accepts arguments like +H or -I
	* feature: site flags can now change flags
	* feature: site change credits
	* feature: new vars credits (user)
	* bugfix: many commands not working inside symlinks (RETR, STOR, etc)
	* bugfix: site chmod 0 not working
	* bugfix: disabled command SAVECFG (Not Yet Implemented)
	* bugfix: perl: 'vars_user set' reporting errors on success

2004-08-08  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: transfer data buffer is now dynamic, size can be tweaked in config
	* feature: changed semaphore to mutex in bandwidth limiter
	* bugfix: segfault when exiting (when freeing shm vars)
	* bugfix: wzd_mutex_create always returning NULL

2004-08-06  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: permissions not displayed correctly on windows (again)

2004-08-04  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: PORT not working in IPv4 when compiled with IPv6

2004-07-29  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: user cache system moved to lib

2004-07-27  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: boostrap script should *really* work on all platforms
	* feature: mysql backend restarted (almost) from scratch, tables redesign
	* bugfix: some typos

2004-07-12  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: split ip addresses related functions to specific file
	* feature: new routine ip_compare